OCR_FPGA.sdk/.metadata/.plugins/org.eclipse.cdt.ui/ocr_c.build.log
15:55:50 **** Auto Build of configuration Debug for project ocr_c ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/testperiph.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/testperiph.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ocr_c_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/testperiph.d" -MT"src/testperiph.o" -o "src/testperiph.o" "../src/testperiph.c"
../src/testperiph.c: In function 'main':
../src/testperiph.c:99:34: error: 'XPAR_AXI_GPIO_IN_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_IN_DEVICE_ID,16);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:99:34: note: each undeclared identifier is reported only once for each function it appears in
../src/testperiph.c:116:34: error: 'XPAR_AXI_GPIO_LEDS_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_LEDS_DEVICE_ID,8);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:133:34: error: 'XPAR_AXI_GPIO_MODE_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_MODE_DEVICE_ID,1);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:150:34: error: 'XPAR_AXI_GPIO_OUT1_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_OUT1_DEVICE_ID,18);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:167:34: error: 'XPAR_AXI_GPIO_OUT2_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_OUT2_DEVICE_ID,18);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:184:34: error: 'XPAR_AXI_GPIO_OUT3_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_OUT3_DEVICE_ID,18);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:201:34: error: 'XPAR_AXI_GPIO_OUT4_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_OUT4_DEVICE_ID,18);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/testperiph.c:288:34: error: 'XPAR_AXI_GPIO_EXPECTED_DEVICE_ID' undeclared (first use in this function)
       status = GpioOutputExample(XPAR_AXI_GPIO_EXPECTED_DEVICE_ID,4);
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/testperiph.o] B³¹d 1

15:55:53 Build Finished (took 3s.421ms)

